--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,3 +11,14 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<style>
+  body,
+  html,
+  #root {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+  }
+</style>
