--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    font-family: "Open Sans", sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    color: #212832;
   }
 </style>
